--- a/roles/server-nginx/services/oauth2-proxy/snippets/location.conf
+++ b/roles/server-nginx/services/oauth2-proxy/snippets/location.conf
@@ -1,6 +1,6 @@
-# https://oauth2-proxy.github.io/oauth2-proxy/configuration/integration
+# https://oauth2-proxy.github.io/oauth2-proxy/configuration/integrations/nginx
 auth_request /oauth2/auth;
-error_page 401 =302 /oauth2/sign_in;
+error_page 401 =302 https://auth.mixeto.io/oauth2/start?rd=/redirect/$http_host$request_uri;
 
 # pass information via X-User and X-Email headers to backend,
 # requires running with --set-xauthrequest flag
